deploy/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: notification-service  
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: smartparking-notification-service:latest  
        ports:
        - containerPort: 8083
