deploy/booking-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service  
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8084 
  type: ClusterIP
