deploy/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service  
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8083 
  type: ClusterIP
