deploy/parking-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parking-service
spec:
  selector:
    app: parking-service  
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8082 
  type: ClusterIP
