deploy/api-gateway.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /parkings         
        pathType: Prefix
        backend:
          service:
            name: parking-service
            port:
              number: 8080
      - path: /bookings         
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8080
      - path: /notifications     
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8080
